--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 :root{
-    --main-color: #ff9f0d;
+    --main-color: #720dff;
     --text-color: #fff;
     --other-color: #212121;
     --second-color: #9e9e9e;
